ch-ch-ch-changes

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   </head>
 
   <body>
+    
     <div class="overlay hidden"></div>
 
     <div class="daily-prep-list">
@@ -48,7 +49,7 @@
             <div class="modal hidden" id="quickList">
               <div class="modal__header">
                 <div class="modal__title">Quick List</div>
-                <button data-close-modal-target="quickList" class="close-modal">
+                <button data-close-modal-target="quickList" class="modal__close-button">
                   &times;
                 </button>
               </div>
@@ -135,7 +136,7 @@
         <div class="modal hidden" id="foodCost">
           <div class="modal__header">
             <div class="modal__title">Food cost Calculator</div>
-            <button data-close-modal-target="#foodCost" class="close-modal">
+            <button data-close-modal-target="#foodCost" class="modal__close-button">
               &times;
             </button>
           </div>
@@ -199,7 +200,7 @@
         <div class="modal hidden" id="laborCost">
           <div class="modal__header">
             <div class="modal__title">Labor cost Calculator</div>
-            <button data-close-modal-target="laborCost" class="close-modal">
+            <button data-close-modal-target="laborCost" class="modal__close-button">
               &times;
             </button>
           </div>
@@ -221,7 +222,7 @@
         <div class="modal hidden" id="foodSafety">
           <div class="modal__header">
             <div class="modal__title">Food safety reference</div>
-            <button data-close-modal-target="foodSafety" class="close-modal">&times;</button>
+            <button data-close-modal-target="foodSafety" class="modal__close-button">&times;</button>
           </div>
           <div class="modal__body">
             This will be a reference to your company's specific safety measures
@@ -241,7 +242,7 @@
         <div class="modal hidden" id="recipes">
           <div class="modal__header">
             <div class="modal__title">Recipes</div>
-            <button data-close-modal-target="recipes" class="close-modal">&times;</button>
+            <button data-close-modal-target="recipes" class="modal__close-button">&times;</button>
           </div>
           <div class="modal__body">
             This area will contain your company(or personal) recipes. this will
@@ -260,7 +261,7 @@
         <div class="modal hidden" id="conversions">
           <div class="modal__header">
             <div class="modal__title">Conversions</div>
-            <button data-close-modal-target="conversions" class="close-modal">&times;</button>
+            <button data-close-modal-target="conversions" class="modal__close-button">&times;</button>
           </div>
           <div class="modal__body">
             This is where I will put a american to metric or vice versa
