--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
   </head>
 
   <body>
-    
     <div class="overlay hidden"></div>
 
     <div class="daily-prep-list">
@@ -49,7 +48,10 @@
             <div class="modal hidden" id="quickList">
               <div class="modal__header">
                 <div class="modal__title">Quick List</div>
-                <button data-close-modal-target="quickList" class="modal__close-button">
+                <button
+                  data-close-modal-target="quickList"
+                  class="modal__close-button"
+                >
                   &times;
                 </button>
               </div>
@@ -123,7 +125,7 @@
       </div>
     </header>
 
-    <section class="section-start">
+    <section class="section" id="section--1">
       <nav class="section-start__nav">
         <button
           href="#"
@@ -136,7 +138,10 @@
         <div class="modal hidden" id="foodCost">
           <div class="modal__header">
             <div class="modal__title">Food cost Calculator</div>
-            <button data-close-modal-target="#foodCost" class="modal__close-button">
+            <button
+              data-close-modal-target="#foodCost"
+              class="modal__close-button"
+            >
               &times;
             </button>
           </div>
@@ -200,7 +205,10 @@
         <div class="modal hidden" id="laborCost">
           <div class="modal__header">
             <div class="modal__title">Labor cost Calculator</div>
-            <button data-close-modal-target="laborCost" class="modal__close-button">
+            <button
+              data-close-modal-target="laborCost"
+              class="modal__close-button"
+            >
               &times;
             </button>
           </div>
@@ -222,7 +230,12 @@
         <div class="modal hidden" id="foodSafety">
           <div class="modal__header">
             <div class="modal__title">Food safety reference</div>
-            <button data-close-modal-target="foodSafety" class="modal__close-button">&times;</button>
+            <button
+              data-close-modal-target="foodSafety"
+              class="modal__close-button"
+            >
+              &times;
+            </button>
           </div>
           <div class="modal__body">
             This will be a reference to your company's specific safety measures
@@ -242,7 +255,12 @@
         <div class="modal hidden" id="recipes">
           <div class="modal__header">
             <div class="modal__title">Recipes</div>
-            <button data-close-modal-target="recipes" class="modal__close-button">&times;</button>
+            <button
+              data-close-modal-target="recipes"
+              class="modal__close-button"
+            >
+              &times;
+            </button>
           </div>
           <div class="modal__body">
             This area will contain your company(or personal) recipes. this will
@@ -261,7 +279,12 @@
         <div class="modal hidden" id="conversions">
           <div class="modal__header">
             <div class="modal__title">Conversions</div>
-            <button data-close-modal-target="conversions" class="modal__close-button">&times;</button>
+            <button
+              data-close-modal-target="conversions"
+              class="modal__close-button"
+            >
+              &times;
+            </button>
           </div>
           <div class="modal__body">
             This is where I will put a american to metric or vice versa
@@ -277,6 +300,115 @@
         <h2 class="heading-secondary u-margin-bottom-big">
           These are the quick list properties
         </h2>
+      </div>
+    </section>
+
+    <section class="section" id="section--2">
+      <div class="section__title">
+        <h2 class="section__description">Kitchen Teams</h2>
+      </div>
+      <div class="operations">
+        <div class="operations__tab-container">
+          <button
+            class="btn operations__tab operations__tab--1 operations__tab--active"
+            data-tab="1"
+          >
+            <span>01</span>Team Schedule
+          </button>
+          <button
+            class="btn operations__tab operations__tab--2 operations__tab--active"
+            data-tab="2"
+          >
+            <span>02</span>Kitchen Log
+          </button>
+          <button
+            class="btn operations__tab operations__tab--3 operations__tab--active"
+            data-tab="3"
+          >
+            <span>03</span>Events
+          </button>
+          <button
+            class="btn operations__tab operations__tab--4 operations__tab--active"
+            data-tab="4"
+          >
+            <span>04</span>Changes/86
+          </button>
+        </div>
+        <div
+          class="operations__content operations__content--1 operations__content--active"
+        >
+          <div class="operations__icon operations__icon--1">
+            <svg>
+              <use
+              
+              ></use>
+            </svg>
+          </div>
+
+           <h5 class="operations__header">
+            Tranfser money to anyone, instantly! No fees, no BS.
+          </h5>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat.
+          </p>
+        </div>
+
+        <div class="operations__content operations__content--2">
+          <div class="operations__icon operations__icon--2">
+            <svg>
+              <use xlink:href="/referenceLibrary/images/knife.png"></use>
+            </svg>
+          </div>
+          <h5 class="operations__header">
+            Buy a home or make your dreams come true, with instant loans.
+          </h5>
+          <p>
+            Duis aute irure dolor in reprehenderit in voluptate velit esse
+            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+            cupidatat non proident, sunt in culpa qui officia deserunt mollit
+            anim id est laborum.
+          </p>
+        </div>
+        <div class="operations__content operations__content--3">
+          <div class="operations__icon operations__icon--3">
+            <svg>
+              <use xlink:href="/referenceLibrary/images/onion.png"></use>
+            </svg>
+          </div>
+          <h5 class="operations__header">
+            No longer need your account? No problem! Close it instantly.
+          </h5>
+          <p>
+            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+            officia deserunt mollit anim id est laborum. Ut enim ad minim
+            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+            ea commodo consequat.
+          </p>
+        </div>
+
+         <div class="operations__content operations__content--4">
+          <div class="operations__icon operations__icon--4">
+            <svg>
+              <use xlink:href="/referenceLibrary/images/onion.png"></use>
+            </svg>
+          </div>
+          <h5 class="operations__header">
+            No longer need your account? No problem! Close it instantly.
+          </h5>
+          <p>
+            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+            officia deserunt mollit anim id est laborum. Ut enim ad minim
+            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+            ea commodo consequat.
+          </p>
+        </div>
+
+
+
+        </div>
       </div>
     </section>
 
