intagrating the team tabs

--- a/index.html
+++ b/index.html
@@ -126,6 +126,9 @@
     </header>
 
     <section class="section" id="section--1">
+      <div class="section-title">
+        <h2 class="section-title heading-secondary">Quick Reference</h2>
+      </div>
       <nav class="section-start__nav">
         <button
           href="#"
@@ -305,7 +308,7 @@
 
     <section class="section" id="section--2">
       <div class="section__title">
-        <h2 class="section__description">Kitchen Teams</h2>
+        <h2 class="section-title heading-secondary">Kitchen Teams</h2>
       </div>
       <div class="operations">
         <div class="operations__tab-container">
