--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 
     <section class="section" id="section--2">
       <div class="section__title">
-        <h2 class="section-title heading-secondary">Kitchen Teams</h2>
+        <h2 class="section__description heading-secondary">Kitchen Teams</h2>
       </div>
       <div class="operations">
         <div class="operations__tab-container">
