tweaking tabs element

--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
     </header>
 
     <section class="section" id="section--1">
-      <div class="section-title">
-        <h2 class="section-title heading-secondary">Quick Reference</h2>
+      <div class="section__title">
+        <h2 class="section__title heading-secondary">Quick Reference</h2>
       </div>
       <nav class="section-start__nav">
         <button
