--- a/index.html
+++ b/index.html
@@ -125,6 +125,112 @@
       </div>
     </header>
 
+        <section class="section" id="section--2">
+      <div class="section__title">
+        <h2 class="section__description heading-secondary">Kitchen Teams</h2>
+      </div>
+      <div class="operations">
+        <div class="operations__tab-container">
+          <button
+            class="btn operations__tab operations__tab--1 operations__tab--active"
+            data-tab="1"
+          >
+            <span>01</span>Team Schedule
+          </button>
+          <button
+            class="btn operations__tab operations__tab--2 operations__tab--active"
+            data-tab="2"
+          >
+            <span>02</span>Kitchen Log
+          </button>
+          <button
+            class="btn operations__tab operations__tab--3 operations__tab--active"
+            data-tab="3"
+          >
+            <span>03</span>Events
+          </button>
+          <button
+            class="btn operations__tab operations__tab--4 operations__tab--active"
+            data-tab="4"
+          >
+            <span>04</span>Changes/86
+          </button>
+        </div>
+        <div
+          class="operations__content operations__content--1 operations__content--active"
+        >
+          <div class="operations__icon operations__icon--1">
+            <svg>
+              <use
+              
+              ></use>
+            </svg>
+          </div>
+
+           <h5 class="operations__header">
+            Team scheduling is important for work life balance.
+          </h5>
+          <p>
+            It is important to involve the team with the schedule, most problems can be solved during a good scheduling process.
+          </p>
+        </div>
+
+        <div class="operations__content operations__content--2">
+          <div class="operations__icon operations__icon--2">
+            <svg>
+              <use xlink:href="/referenceLibrary/images/knife.png"></use>
+            </svg>
+          </div>
+          <h5 class="operations__header">
+            Buy a home or make your dreams come true, with instant loans.
+          </h5>
+          <p>
+            Duis aute irure dolor in reprehenderit in voluptate velit esse
+            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+            cupidatat non proident, sunt in culpa qui officia deserunt mollit
+            anim id est laborum.
+          </p>
+        </div>
+        <div class="operations__content operations__content--3">
+          <div class="operations__icon operations__icon--3">
+            <svg>
+              <use xlink:href="/referenceLibrary/images/onion.png"></use>
+            </svg>
+          </div>
+          <h5 class="operations__header">
+            No longer need your account? No problem! Close it instantly.
+          </h5>
+          <p>
+            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+            officia deserunt mollit anim id est laborum. Ut enim ad minim
+            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+            ea commodo consequat.
+          </p>
+        </div>
+
+         <div class="operations__content operations__content--4">
+          <div class="operations__icon operations__icon--4">
+            <svg>
+              <use xlink:href="/referenceLibrary/images/onion.png"></use>
+            </svg>
+          </div>
+          <h5 class="operations__header">
+            No longer need your account? No problem! Close it instantly.
+          </h5>
+          <p>
+            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+            officia deserunt mollit anim id est laborum. Ut enim ad minim
+            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+            ea commodo consequat.
+          </p>
+        </div>
+
+
+
+        </div>
+      </div>
+    </section>
+
     <section class="section" id="section--1">
       <div class="section__title">
         <h2 class="section__title heading-secondary">Quick Reference</h2>
@@ -306,114 +412,7 @@
       </div>
     </section>
 
-    <section class="section" id="section--2">
-      <div class="section__title">
-        <h2 class="section__description heading-secondary">Kitchen Teams</h2>
-      </div>
-      <div class="operations">
-        <div class="operations__tab-container">
-          <button
-            class="btn operations__tab operations__tab--1 operations__tab--active"
-            data-tab="1"
-          >
-            <span>01</span>Team Schedule
-          </button>
-          <button
-            class="btn operations__tab operations__tab--2 operations__tab--active"
-            data-tab="2"
-          >
-            <span>02</span>Kitchen Log
-          </button>
-          <button
-            class="btn operations__tab operations__tab--3 operations__tab--active"
-            data-tab="3"
-          >
-            <span>03</span>Events
-          </button>
-          <button
-            class="btn operations__tab operations__tab--4 operations__tab--active"
-            data-tab="4"
-          >
-            <span>04</span>Changes/86
-          </button>
-        </div>
-        <div
-          class="operations__content operations__content--1 operations__content--active"
-        >
-          <div class="operations__icon operations__icon--1">
-            <svg>
-              <use
-              
-              ></use>
-            </svg>
-          </div>
 
-           <h5 class="operations__header">
-            Tranfser money to anyone, instantly! No fees, no BS.
-          </h5>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.
-          </p>
-        </div>
-
-        <div class="operations__content operations__content--2">
-          <div class="operations__icon operations__icon--2">
-            <svg>
-              <use xlink:href="/referenceLibrary/images/knife.png"></use>
-            </svg>
-          </div>
-          <h5 class="operations__header">
-            Buy a home or make your dreams come true, with instant loans.
-          </h5>
-          <p>
-            Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-            cupidatat non proident, sunt in culpa qui officia deserunt mollit
-            anim id est laborum.
-          </p>
-        </div>
-        <div class="operations__content operations__content--3">
-          <div class="operations__icon operations__icon--3">
-            <svg>
-              <use xlink:href="/referenceLibrary/images/onion.png"></use>
-            </svg>
-          </div>
-          <h5 class="operations__header">
-            No longer need your account? No problem! Close it instantly.
-          </h5>
-          <p>
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-            officia deserunt mollit anim id est laborum. Ut enim ad minim
-            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-            ea commodo consequat.
-          </p>
-        </div>
-
-         <div class="operations__content operations__content--4">
-          <div class="operations__icon operations__icon--4">
-            <svg>
-              <use xlink:href="/referenceLibrary/images/onion.png"></use>
-            </svg>
-          </div>
-          <h5 class="operations__header">
-            No longer need your account? No problem! Close it instantly.
-          </h5>
-          <p>
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-            officia deserunt mollit anim id est laborum. Ut enim ad minim
-            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-            ea commodo consequat.
-          </p>
-        </div>
-
-
-
-        </div>
-      </div>
-    </section>
 
     <footer class="footer">
       <div class="footer__logo">FOOTER LOGO</div>
