--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             class="btn operations__tab operations__tab--4 operations__tab--active"
             data-tab="4"
           >
-            <span>04</span>Changes/86
+            <span>04</span>86/out
           </button>
         </div>
         <div
