fixed tab section

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
            <h5 class="operations__header">
             Team scheduling is important for work life balance.
           </h5>
-          <p>
+          <p class="tabs-paragraph">
             It is important to involve the team with the schedule, most problems can be solved during a good scheduling process.
           </p>
         </div>
@@ -182,13 +182,10 @@
             </svg>
           </div>
           <h5 class="operations__header">
-            Buy a home or make your dreams come true, with instant loans.
+            Active kitchen logging keeps the tem informed.
           </h5>
           <p>
-            Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-            cupidatat non proident, sunt in culpa qui officia deserunt mollit
-            anim id est laborum.
+            This is where your shift leaders can communicate effectivly throughout the kitchen. Active logging simply means that evryone on the team is responsible for activly logging to be sure all team members are in the game.
           </p>
         </div>
         <div class="operations__content operations__content--3">
@@ -198,13 +195,10 @@
             </svg>
           </div>
           <h5 class="operations__header">
-            No longer need your account? No problem! Close it instantly.
+            Events calender will keep the kitchen informed. 
           </h5>
           <p>
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-            officia deserunt mollit anim id est laborum. Ut enim ad minim
-            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-            ea commodo consequat.
+            It is impairitive for a well run kitchen to be ahead of up coming events. This central calender will help team members to think ahead about specific preps, as well as, plan for vacations and time off.
           </p>
         </div>
 
@@ -215,13 +209,10 @@
             </svg>
           </div>
           <h5 class="operations__header">
-            No longer need your account? No problem! Close it instantly.
+            !86! WE ARE OUT OF:
           </h5>
           <p>
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-            officia deserunt mollit anim id est laborum. Ut enim ad minim
-            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-            ea commodo consequat.
+            Listing the products that are out will help team members plan wisely and use only what is needed or make the neccessary substitutions. Managers can also make efforts to get the things that we are out of.
           </p>
         </div>
 
