fixed and 😎 tabs

--- a/index.html
+++ b/index.html
@@ -135,25 +135,25 @@
             class="btn operations__tab operations__tab--1 operations__tab--active"
             data-tab="1"
           >
-            <span>01</span>Team Schedule
+          Team Schedule
           </button>
           <button
             class="btn operations__tab operations__tab--2 operations__tab--active"
             data-tab="2"
           >
-            <span>02</span>Kitchen Log
+          Kitchen Log
           </button>
           <button
             class="btn operations__tab operations__tab--3 operations__tab--active"
             data-tab="3"
           >
-            <span>03</span>Events
+          Events
           </button>
           <button
             class="btn operations__tab operations__tab--4 operations__tab--active"
             data-tab="4"
           >
-            <span>04</span>86/out
+          86/out
           </button>
         </div>
         <div
@@ -396,11 +396,11 @@
         <!-- <a href="#" class="section-start--link">Labor Cost</a> -->
       </nav>
 
-      <div class="section-start__heading u-center-text">
+      <!-- <div class="section-start__heading u-center-text">
         <h2 class="heading-secondary u-margin-bottom-big">
-          These are the quick list properties
+          
         </h2>
-      </div>
+      </div> -->
     </section>
 
 
