fixed food cost calculator

--- a/index.html
+++ b/index.html
@@ -264,20 +264,20 @@
         </form>
       </div> -->
             <span class="foodCost__inputLabel">Starting inventory total</span>
-            <input type="number" class="foodCost__input" id="inventoryStart" />
+            <input type="number" class="foodCost__input foodCost--start" id="inventoryStart" />
 
             <span class="foodCost__inputLabel"
               >Total provisions purchased
             </span>
-            <input type="number" class="foodCost__input" id="purchases" />
+            <input type="number" class="foodCost__input foodCost--buy" id="purchases" />
 
             <span for="inventoryEnd" class="foodCost__inputLabel"
               >Ending inventory total</span
             >
-            <input type="number" class="foodCost__input" id="inventoryEnd" />
+            <input type="number" class="foodCost__input foodCost--end" id="inventoryEnd" />
 
             <span class="foodCost__inputLabel">Total food sales</span>
-            <input type="number" class="foodCost__input" id="totalSales" />
+            <input type="number" class="foodCost__input foodCost--sales" id="totalSales" />
 
             <span class="foodCost__inputLabel"
               >Food cost percent for this item</span
