--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
             </button>
           </div>
           <div class="modal__body">
-            Inventory and Food Cost, as well as per plate cost.
+            Inventory and Food Cost, as well as per plate cost. Quick food calculations can be done here.
           </div>
 
           <div class="foodCost__calculator">
