this updates the recipes section, text only

--- a/index.html
+++ b/index.html
@@ -247,7 +247,8 @@
             </button>
           </div>
           <div class="modal__body">
-            This area will contain your company(or personal) recipes. this will
+            This area will have access to over 16 million recipes from the web.
+            This area will contain your company(or personal) recipes. This will
             also include a scale up or down tool for events or parties.
           </div>
         </div>
