sub_header text

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
       <div class="header__text--box">
         <h1 class="heading-primary">
-          <span class="heading-primary--main">Kitchen Prep App</span>
+          <span class="heading-primary--main">Kitchen Prep</span>
           <span class="heading-primary--sub">A kitchen team building app.</span>
         </h1>
       </div>
