adding recipe API

--- a/index.html
+++ b/index.html
@@ -246,13 +246,14 @@
               &times;
             </button>
           </div>
+          <div class="recipe">
           <div class="modal__body">
             This area will have access to over 16 million recipes from the web.
             This area will contain your company(or personal) recipes. This will
             also include a scale up or down tool for events or parties.
           </div>
         </div>
-
+</div>
         <button
           data-modal-target="#conversions"
           href="#"
