--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="/KitchenPrepApp/referenceLibrary/logos/kitchenPrepAppFavicon.ico" />
+    <link rel="icon" href="../KitchenPrepApp/referenceLibrary/logos/kitchenPrepAppFavicon.ico" />
     <link rel="stylesheet" href="css/style.css" />
     <title>Kitchen Prep App</title>
   </head>
@@ -92,17 +92,17 @@
 
     <div class="icon">
       <img
-        src="/KitchenPrepApp/referenceLibrary/images/broccoliSilou.png"
+        src="../KitchenPrepApp/referenceLibrary/images/broccoliSilou.png"
         alt=""
         class="icon__broccoli"
       />
       <img
-        src="/KitchenPrepApp/referenceLibrary/images/knife.png"
+        src="../KitchenPrepApp/referenceLibrary/images/knife.png"
         alt=""
         class="icon__knife"
       />
       <img
-        src="/KitchenPrepApp/referenceLibrary/images/onion.png"
+        src="../KitchenPrepApp/referenceLibrary/images/onion.png"
         alt=""
         class="icon__onion"
       />
@@ -111,7 +111,7 @@
     <header class="header">
       <div class="header__logo-box">
         <img
-          src="/KitchenPrepApp/referenceLibrary/logos/KPALOGO.png"
+          src="../KitchenPrepApp/referenceLibrary/logos/KPALOGO.png"
           alt="kitchenPrepLogo"
           class="header__logo"
         />
