recipe restructuring console

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
     <div class="icon">
       <img
-        src="KitchenPrepApp/referenceLibrary/images/broccoliSilou.png"
+        src="../KitchenPrepApp/referenceLibrary/images/broccoliSilou.png"
         alt=""
         class="icon__broccoli"
       />
