testing the recipes

--- a/index.html
+++ b/index.html
@@ -252,6 +252,28 @@
             This area will contain your company(or personal) recipes. This will
             also include a scale up or down tool for events or parties.
           </div>
+          <div class="search-results">
+        <ul class="results">
+          <!--                                 -->
+         <!--code added for testing from Johnas-->
+          <li class="preview">
+            <a class="preview__link preview__link--active" href="#23456">
+              <figure class="preview__fig">
+                <img src="src/img/test-1.jpg" alt="Test" />
+              </figure>
+              <div class="preview__data">
+                <h4 class="preview__title">Pasta with Tomato Cream ...</h4>
+                <p class="preview__publisher">The Pioneer Woman</p>
+                <div class="preview__user-generated">
+                  <svg>
+                    <use href="src/img/icons.svg#icon-user"></use>
+                  </svg>
+                </div>
+              </div>
+            </a>
+          </li>
+          <!--     test code                        -->
+        </ul>
         </div>
 
         <button
