getting it synced up

--- a/index.html
+++ b/index.html
@@ -254,8 +254,9 @@
           </div>
           <div class="search-results">
         <ul class="results">
+          
           <!--                                 -->
-         <!--code added for testing from Johnas-->
+         <!--code added for testing from Johnas
           <li class="preview">
             <a class="preview__link preview__link--active" href="#23456">
               <figure class="preview__fig">
@@ -272,7 +273,7 @@
               </div>
             </a>
           </li>
-          <!--     test code                        -->
+                                  -->
         </ul>
         </div>
 
