--- a/index.html
+++ b/index.html
@@ -252,10 +252,10 @@
             This area will contain your company(or personal) recipes. This will
             also include a scale up or down tool for events or parties.
           </div>
-          <div class="search-results">
+         <!-- <div class="search-results">
         <ul class="results">
-          
-          <!--                                 -->
+
+                                           -->
          <!--code added for testing from Johnas
           <li class="preview">
             <a class="preview__link preview__link--active" href="#23456">
@@ -273,8 +273,8 @@
               </div>
             </a>
           </li>
-                                  -->
-        </ul>
+                                  
+        </ul>-->
         </div>
 
         <button
