--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         <div class="operations__content operations__content--3">
           <div class="operations__icon operations__icon--3">
             <svg>
-              <use xlink:href="/referenceLibrary/images/onion.png"></use>
+              <use xlink:href="../KitchenPrepApp/referenceLibrary/images/onion.png"></use>
             </svg>
           </div>
           <h5 class="operations__header">
@@ -209,10 +209,10 @@
             </svg>
           </div>
           <h5 class="operations__header">
-            !86! WE ARE OUT OF:
+            !86! Ordering list/request:
           </h5>
           <p>
-            Listing the products that are out will help team members plan wisely and use only what is needed or make the neccessary substitutions. Managers can also make efforts to get the things that we are out of.
+            Listing the products that are out will help team members to order accordingly, plan wisely and use only what is needed or make the neccessary substitutions. Managers can also make efforts to get the things that we are out of.
           </p>
         </div>
 
