--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
          <div class="operations__content operations__content--4">
           <div class="operations__icon operations__icon--4">
             <svg>
-              <use xlink:href="/referenceLibrary/images/onion.png"></use>
+              <use xlink:href="/referenceLibrary/images/onion.png">where is this</use>
             </svg>
           </div>
           <h5 class="operations__header">
