--- a/index.html
+++ b/index.html
@@ -241,10 +241,10 @@
             This area will contain your company(or personal) recipes. This will
             also include a scale up or down tool for events or parties.
           </div>
-         <!-- <div class="search-results">
+          <div class="search-results">
         <ul class="results">
 
-                                           -->
+         <a href="#5ed6604591c37cdc054bca5d">recipe</a>                                   
          <!--code added for testing from Johnas
           <li class="preview">
             <a class="preview__link preview__link--active" href="#23456">
@@ -262,8 +262,8 @@
               </div>
             </a>
           </li>
-                                  
-        </ul>-->
+        -->                    
+        </ul>
         </div>
 
         <button
