--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
             This area will contain your company(or personal) recipes. This will
             also include a scale up or down tool for events or parties.
           </div>
-          <div class="search-results">
+         <!-- <div class="search-results">
         <ul class="results">
 
          <a href="#5ed6604591c37cdc054bca5d">recipe</a>                                   
@@ -263,9 +263,9 @@
               </div>
             </a>
           </li>
-        -->                    
+                      
         </ul>
-        </div>
+        </div>-->
 
         <button
           data-modal-target="#conversions"
