--- a/index.html
+++ b/index.html
@@ -314,11 +314,11 @@
             Inventory and Food Cost, as well as per plate cost. Quick food calculations can be done here.
           </div>
 
-          <div class="foodCost__calculator">
-            <!-- <div class="foodCostInputs">
+          < class="foodCost__calculator">
+             <div class="foodCostInputs">
               
             </div> -->
-            <!-- <div class="operation operation--transfer">
+            <div class="operation operation--transfer">
         <h2>Transfer money</h2>
         <form class="form form--transfer">
           <input type="text" class="form__input form__input--to" />
@@ -327,7 +327,8 @@
           <label class="form__label">Transfer to</label>
           <label class="form__label">Amount</label>
         </form>
-      </div> -->
+      </div> 
+    </nav>
             <span class="foodCost__inputLabel">Starting inventory total</span>
             <input type="number" class="foodCost__input foodCost--start" id="inventoryStart" />
 
@@ -412,7 +413,7 @@
 
 
         <!-- <a href="#" class="section-start--link">Labor Cost</a> -->
-      </nav>
+      </>
 
       <!-- <div class="section-start__heading u-center-text">
         <h2 class="heading-secondary u-margin-bottom-big">
