--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
       <div class="section__title">
         <h2 class="section__title heading-secondary">Quick Reference</h2>
       </div>
-      <nav class="section-start__nav">
+      < class="section-start__nav">
 
                 <button
           data-modal-target="#recipes"
@@ -328,7 +328,7 @@
           <label class="form__label">Amount</label>
         </form>
       </div> 
-    </nav>
+    </div>
             <span class="foodCost__inputLabel">Starting inventory total</span>
             <input type="number" class="foodCost__input foodCost--start" id="inventoryStart" />
 
