sync, fixed it~

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
           </div>
           <div class="recipe">this is the recipe you asked for</div>
           <div class="modal__body">
-            This area will have access to over 16 million recipes from the web.
+            This area will have access to over 1 million recipes from the web.
             This area will contain your company(or personal) recipes. This will
             also include a scale up or down tool for events or parties.
           </div>
@@ -266,7 +266,7 @@
                       
         </ul>
         </div>-->
-
+       </div>
         <button
           data-modal-target="#conversions"
           href="#"
