--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 
          <a href="#5ed6604591c37cdc054bca5d">recipe</a>                                   
          <a href="#5ed6604691c37cdc054bd016">recipe</a>                                   
-         code added for testing from Johnas
+         <!--code added for testing from Johnas
           <li class="preview">
             <a class="preview__link preview__link--active" href="#23456">
               <figure class="preview__fig">
@@ -263,8 +263,8 @@
             </a>
           </li>
                       
-        </ul>
-        </div>-->
+        </ul>-->
+        </div>
        </div>
         <button
           data-modal-target="#conversions"
