mutes jonas adding recipe

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
             This area will contain your company(or personal) recipes. This will
             also include a scale up or down tool for events or parties.
           </div>
-        <ul class="results">
+       <!-- <ul class="results">
 
          <a href="#5ed6604591c37cdc054bca5d">recipe</a>                                   
          <a href="#5ed6604691c37cdc054bd016">recipe</a>                                   
