--- a/index.html
+++ b/index.html
@@ -478,6 +478,6 @@
             >
             <input type="number" class="foodCost__input" id="foodCostPercent" />
           </div> -->
-    <script src="/app.js"></script>
+    <script src="../KitchenPrepApp/js/app.js"></script>
   </body>
 </html>
