--- a/index.html
+++ b/index.html
@@ -184,9 +184,9 @@
             This is where your shift leaders can communicate effectivly throughout the kitchen. Active logging simply means that evryone on the team is responsible for activly logging to be sure all team members are in the game.
           </p>
         </div>
-        <div class="operations__content operations__content--3">
+        < class="operations__content operations__content--3">
           
-          </div>
+          
           <h5 class="operations__header">
             Events calender will keep the kitchen informed. 
           </h5>
