--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
               &times;
             </button>
           </div>
-          <div class="recipe">this is the recipe you asked for</div>
+          <div class="modal__title">this is the recipe you asked for</div>
           <div class="modal__body">
             This area will have access to over 1 million recipes from the web.
             This area will contain your company(or personal) recipes. This will
