--- a/index.html
+++ b/index.html
@@ -478,6 +478,6 @@
             >
             <input type="number" class="foodCost__input" id="foodCostPercent" />
           </div> -->
-    <script type="text/javascript" src="../KitchenPrepApp/app.js"></script>
+    <script type="text/javascript" src="../KitchenPrepApp/app.js" charset="utf-8"></script>
   </body>
 </html>
