--- a/index.html
+++ b/index.html
@@ -237,11 +237,12 @@
           </div>
           <div class="modal__title">this is the recipe you asked for</div>
           <div class="modal__body">
+            <div class="recipe"></div>
             This area will have access to over 1 million recipes from the web.
             This area will contain your company(or personal) recipes. This will
             also include a scale up or down tool for events or parties.
           </div>
-       <!-- <ul class="results">
+        <ul class="results">
 
          <a href="#5ed6604591c37cdc054bca5d">recipe</a>                                   
          <a href="#5ed6604691c37cdc054bd016">recipe</a>                                   
