code repaired for now

--- a/index.html
+++ b/index.html
@@ -250,14 +250,14 @@
           <li class="preview">
             <a class="preview__link preview__link--active" href="#23456">
               <figure class="preview__fig">
-                <img src="src/img/test-1.jpg" alt="Test" />
+                <img src="./referenceLibrary/images/strudel.png" alt="Test" />
               </figure>
               <div class="preview__data">
-                <h4 class="preview__title">Pasta with Tomato Cream ...</h4>
-                <p class="preview__publisher">The Pioneer Woman</p>
+                <h4 class="preview__title">This is where the recipe will display</h4>
+                <p class="preview__publisher">Publisher</p>
                 <div class="preview__user-generated">
                   <svg>
-                    <use href="src/img/icons.svg#icon-user"></use>
+                    <use href="./referenceLibrary/images/potatoPuffs.png"></use>
                   </svg>
                 </div>
               </div>
