added search and a lot of js

--- a/index.html
+++ b/index.html
@@ -236,6 +236,22 @@
             </button>
           </div>
           <div class="modal__title">this is the recipe you asked for</div>
+          <div class="container">
+      <header class="header">
+        <img src="./referenceLibrary/images/onion.png" alt="Logo" class="header__logo" />
+        <form class="search">
+          <input
+            type="text"
+            class="search__field"
+            placeholder="Search over 1,000,000 recipes..."
+          />
+          <button class="btn search__btn">
+            <svg class="search__icon">
+              <use href="./referenceLibrary/logos/kitchenPrepAppFavicon.ico"></use>
+            </svg>
+            <span>Search</span>
+          </button>
+        </form>
           <div class="modal__body">
             <div class="recipe"></div>
             This area will have access to over 1 million recipes from the web.
@@ -250,7 +266,7 @@
           <li class="preview">
             <a class="preview__link preview__link--active" href="#23456">
               <figure class="preview__fig">
-                <img src="./referenceLibrary/images/strudel.png" alt="Test" />
+                <img src="./referenceLibrary/images/brioche.png" alt="Test" />
               </figure>
               <div class="preview__data">
                 <h4 class="preview__title">This is where the recipe will display</h4>
@@ -479,6 +495,6 @@
             >
             <input type="number" class="foodCost__input" id="foodCostPercent" />
           </div> -->
-    <script type="text/javascript" src="app.js" charset="utf-8"></script>
+    <script type="module" src="app.js" charset="utf-8"></script>
   </body>
 </html>
