results from search

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 
          <a href="#5ed6604591c37cdc054bca5d">recipe</a>                                   
          <a href="#5ed6604691c37cdc054bd016">recipe</a>                                   
-         <!--code added for testing from Johnas-->
+         <!--code added for testing from Johnas
           <li class="preview">
             <a class="preview__link preview__link--active" href="#23456">
               <figure class="preview__fig">
@@ -278,9 +278,9 @@
                 </div>
               </div>
             </a>
-          </li>
+          </li>-->
                       
-        </ul>-->
+        </ul>
         </div>
        </div>
         <button
