--- a/index.html
+++ b/index.html
@@ -495,6 +495,6 @@
             >
             <input type="number" class="foodCost__input" id="foodCostPercent" />
           </div> -->
-    <script type="module" src="app.js" charset="utf-8"></script>
+    <script type="module" src="/js/app.js" charset="utf-8"></script>
   </body>
 </html>
