--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="/referenceLibrary/logos/KPALOGO.png" />
+    <link rel="icon" href="./referenceLibrary/logos/kitchenPrepAppFavicon.ico" />
     <link rel="stylesheet" href="css/style.css" />
     <title>Kitchen Prep App</title>
   </head>
@@ -92,17 +92,17 @@
 
     <div class="icon">
       <img
-        src="/referenceLibrary/images/broccoliSilou.png"
+        src="./referenceLibrary/images/broccoliSilou.png"
         alt=""
         class="icon__broccoli"
       />
       <img
-        src="/referenceLibrary/images/knife.png"
+        src="./referenceLibrary/images/knife.png"
         alt=""
         class="icon__knife"
       />
       <img
-        src="/referenceLibrary/images/onion.png"
+        src="./referenceLibrary/images/onion.png"
         alt=""
         class="icon__onion"
       />
@@ -111,7 +111,7 @@
     <header class="header">
       <div class="header__logo-box">
         <img
-          src="/referenceLibrary/logos/KPALOGO.png"
+          src="./referenceLibrary/logos/KPALOGO.png"
           alt="kitchenPrepLogo"
           class="header__logo"
         />
@@ -492,6 +492,6 @@
             >
             <input type="number" class="foodCost__input" id="foodCostPercent" />
           </div> -->
-    <script type="module" src="/js/app.js" charset="utf-8"></script>
+    <script type="module" src="./js/app.js" charset="utf-8"></script>
   </body>
 </html>
